# infobus

./: .env  .env.dev  .env.example  .env.local.example  .env.prod  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  Dockerfile.postgres  HOWTO.md  README.md  SECURITY_AUDIT.md  SSL_README.md  WARP.md  compose.dev.yml  compose.prod.yml  demo_graphql.py  docker-compose.production.yml  docker-compose.ssl.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
api/: ADMIN_DASHBOARD.md  admin.py  admin_dashboard.py  admin_urls.py  auth_views.py  cache_decorators.py  cache_middleware.py  datahub.yml  middleware.py  models.py  permissions.py  rate_limiting.py  serializers.py  urls.py  views.py
backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml
context/: Dockerfile  main.py  pyproject.toml
core/: Dockerfile  docker-entrypoint.sh  manage.py  pyproject.toml
datahub/: asgi.py  settings.py  test_runner.py  urls.py
docker-entrypoint-initdb.d/: init-extensions.sql
docs/: README.md  architecture.md  index.md  metrics.md  pyproject.toml  zensical.toml
feed/: admin.py  apps.py  metrics.py  routing.py  tasks.py  test_metrics.py  urls.py  views.py
frontend/: Dockerfile  README.md  docker-entrypoint.sh  package.json
gql/: README.md  __init__.py  apps.py
gql_schema/: __init__.py  queries.py  schema.py  tests.py  types.py
graphql/: DEMO_QUERIES.md  README.md  __init__.py  apps.py  queries.py  tests.py
nginx/: nginx.conf  nginx.conf.ssl
scheduler/: Dockerfile  celerybeat-schedule-shm  celerybeat-schedule-wal  (+2 more)
(+109 files in other folders)
