[project]
name = "infobus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.5.3",
    "channels>=4.3.1",
    "channels-redis>=4.3.0",
    "daphne>=4.2.1",
    "django>=5.2.6",
    "django-celery-beat>=2.8.1",
    "django-celery-results>=2.6.0",
    "django-filter>=25.1",
    "djangorestframework>=3.16.1",
    "djangorestframework-gis>=1.2.0",
    "drf-spectacular>=0.28.0",
    "flower>=2.0.1",
    "geopandas>=1.1.1",
    "gtfs-realtime-bindings>=1.0.0",
    "gunicorn>=23.0.0",
    "mkdocs-material>=9.6.20",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
    "pytz>=2025.2",
    "redis>=5.2.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.0",
    "watchdog>=6.0.0",
]
